--- a/gui/index.html
+++ b/gui/index.html
@@ -7,28 +7,65 @@
   <meta charset="UTF-8">
   <title>Electron App</title>
   <style>
-    #buttonContainer {
-      max-height: 400px;
+  #buttonContainer {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      grid-gap: 10px;
+      max-height: 25%;
       overflow-y: auto;
-      margin-right: 20px;
-    }
+  }
 
-    .buttonWrapper {
+  .buttonWrapper {
       display: flex;
       align-items: center;
+      justify-content: flex-start;
       margin-bottom: 10px;
-    }
+      position: relative;
+  }
 
-    .thumbnail {
-      max-width: 150px;
-      max-height: 150px;
-      cursor: pointer;
-    }
+
+  .thumbnail {
+      width: 130px;
+      height: auto;
+      max-height: 130px;
+      object-fit: cover;
+      margin-right: 10px;  // added this to give some space between the image and the tickbox
+  }
+
+  .tickBox {
+      position: absolute;
+      right: 5px;
+  }
+
 
     #imageViewer {
-      width: 400px;
-      height: 400px;
+
+      height: 150%%;
     }
+    .viewerImage {
+
+      max-height: 1000px;
+      display: block;
+      margin: 0 auto;
+    }
+    #videoPlayer {
+      width: 50%;
+      height: 50%;
+    }
+    .playerVideo {
+      max-width:100%;
+      max-height: 100%;
+      display: block;
+      margin: 0 auto;
+      padding: 5px;
+    }
+    #customConsole{
+    border: 1px solid black;
+    height: 25%;
+    overflow: auto;
+    padding: 5px;
+    }
+
   </style>
 </head>
 <body>
@@ -42,7 +79,14 @@
   </div>
 
   <div id="buttonContainer"></div>
+
+
+
+
   <div id="imageViewer"></div>
+  <div id="videoPlayer"></div>
+
+  <div id="customConsole"></div>
 
   <script src="./renderer.js"></script>
 </body>
