lazy loading and the file counting now working

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   </style>
 </head>
 <body>
+  <div id="fileCount">Files Processed: 0</div>
   <div id="tab1">
     <input type="file" id="selectDirectory" webkitdirectory directory multiple>
   </div>
