Now working with uncompiled python script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
   <div id="tab2">
 <!--    <button id="loadPathsButton">Display</button>-->
-    <button id="copySelectedButton">Copy Selected</button>
+      <button id="copySelectedButton">Copy Selected</button>
+      <div id="destDirLabel">Desktop folder name:</div>
+      <input id="destDir" value="Copied">
   </div>
 
   <div id="buttonContainer"></div>
